Answer 2c and explain it.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -539,6 +539,66 @@
     "\n",
     "The approximation of the expected utility using the Taylor series expansion is **32.1454**, compared to the directly calculated expected utility of **31.7352**. The small discrepancy between the Taylor series approximation and the actual expected utility suggests that the approximation is **quite good**, especially considering the simplicity and the local nature of the Taylor series expansion around the initial wealth $W_0$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. $\\boldsymbol{k = 2}$\n",
+    "\n",
+    "Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Certainty Equivalent for k = 2: 77.81\n",
+      "Risk Premium for k = 2: -44.47\n",
+      "Expected Utility for k = 2: 1161666.67\n",
+      "Taylor Series Expected Utility Approximation for k = 2: 1067777.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recalculate CE, RP, and Taylor series approximation with k = 2.\n",
+    "EU_k2 = expected_utility(W0, W_win, W_lose, p_win, p_lose, k = 2)\n",
+    "CE_k2 = find_certainty_equivalent(EU_k2, W0, k = 2)\n",
+    "RP_k2 = calculate_risk_premium(E_W, W0, CE_k2)\n",
+    "\n",
+    "# Taylor series expansion requires the first and second derivatives at W0 for k = 2.\n",
+    "u_prime_W0_k2 = u_prime(W0, k = 2)\n",
+    "u_double_prime_W0_k2 = u_double_prime(W0, k = 2)\n",
+    "EU_approx_k2 = taylor_series_approximation(W0, delta_W, k = 2)\n",
+    "\n",
+    "# Display the results for k = 2.\n",
+    "print(f\"Certainty Equivalent for k = 2: {CE_k2:.2f}\")\n",
+    "print(f\"Risk Premium for k = 2: {RP_k2:.2f}\")\n",
+    "print(f\"Expected Utility for k = 2: {EU_k2:.2f}\")\n",
+    "print(f\"Taylor Series Expected Utility Approximation for k = 2: {EU_approx_k2:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. *What is the Certainty Equivalent of this risky game?*\n",
+    "\n",
+    "The Certainty Equivalent (CE) for $k = 2$ is $\\bf{\\$77.81}$. This value represents the guaranteed amount of money that yields the same utility as the expected utility of the risky game for the investor. Given the utility function $u(W) = W^2$, this CE indicates the investor would be indifferent between a sure gain of $\\$77.81$ and participating in the risky game with the potential to win $\\$250$ or lose $\\$400$ with specified probabilities.\n",
+    "\n",
+    "2. *What is the exact Risk Premium of this risky game?*\n",
+    "\n",
+    "The exact Risk Premium (RP) for $k = 2$ is $\\bf{-\\$44.47}$. Typically, the risk premium is expected to be a **positive value**, indicating the amount an investor requires over the expected value of a risky asset to be indifferent between the risky and a certain outcome. A negative risk premium, in this context, suggests that the investor values the gamble more than the expected wealth itself, possibly due to the convexity of the utility function $u(W) = W^2$, which implies risk-seeking behavior. This is because, with $k = 2$, the investor's utility function shows **increasing marginal utility** for wealth, leading to a preference for the gamble over a certain outcome with the same expected monetary value.\n",
+    "\n",
+    "3. *How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?*\n",
+    "\n",
+    "The Expected Utility calculated directly is **1161666.67** while the Taylor Series Expected Utility Approximation for $k = 2$ is **1067777.78**. The approximation provides a simplified way to estimate expected utility based on local changes in wealth (due to the gamble), but **it does not capture the exact utility** because of the non-linear nature of the utility function at $k = 2$. The significant difference between the actual expected utility and the Taylor series approximation reflects the **limitations** of using a **second-order Taylor series** to approximate the utility over a larger range of wealth changes, especially with a highly convex utility function as in the case with $k = 2$. The approximation is useful for small changes in wealth but becomes less accurate for games with outcomes that substantially alter the wealth, as seen in this scenario."
+   ]
   }
  ],
  "metadata": {
