Write proof for 3a.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -611,8 +611,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider an investment universe with $n$ securities, $S_1, S_2, \\dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \\dots, r_n)^T$, the vector of random returns of the securities, and by $\\mu = E(r)$ and $\\Sigma = cov(r)$ (the Expected Return and Variance-covariance matrix\n",
-    "respectively). We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ with random return $r_p(\\omega)$."
+    "Consider an investment universe with $n$ securities, $S_1, S_2, \\dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \\dots, r_n)^T$, the vector of random returns of the securities, and by $\\mu = E(r)$ and $\\Sigma = cov(r)$ (the Expected Return and Variance-covariance matrix respectively). We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ with random return $r_p(\\omega)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. **Risk Aversion**\n",
+    "\n",
+    "Prove that an investor with utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is risk-averse."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prove that an investor with the utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is risk-averse, we need to examine the **concavity** of the utility function. A utility function is considered to demonstrate risk aversion if it is **concave**, which can be formally shown by its second derivative being negative across its domain.\n",
+    "\n",
+    "Given the utility function:\n",
+    "\n",
+    "$$U(r_p) = -e^{-\\lambda r_p}$$\n",
+    "\n",
+    "Let's find the first and second derivatives of $U(r_p)$ with respect to $r_p$:\n",
+    "\n",
+    "1. **First derivative** $U'(r_p)$:\n",
+    "   $$U'(r_p) = \\frac{d}{dr_p}(-e^{-\\lambda r_p}) = \\lambda e^{-\\lambda r_p}$$\n",
+    "\n",
+    "2. **Second derivative** $U''(r_p)$:\n",
+    "$$U''(r_p) = \\frac{d^2}{d(r_p)^2}(-e^{-\\lambda r_p}) = -\\lambda^2 e^{-\\lambda r_p}$$\n",
+    "\n",
+    "To determine if the investor is risk-averse, we examine the sign of $U''(r_p)$:\n",
+    "\n",
+    "$$U''(r_p) = -\\lambda^2 e^{-\\lambda r_p}$$\n",
+    "\n",
+    "Since $\\lambda > 0$ and $e^{-\\lambda r_p}$ is always positive for all $r_p$ (as the exponential function is always positive), it follows that $U''(r_p)$ is **always negative** ($U''(r_p) < 0$) for any value of $r_p$. This **negative second derivative** indicates that the utility function $U(r_p)$ is **concave**, which is a hallmark of **risk aversion**.\n",
+    "\n",
+    "Therefore, the investor with the utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is indeed **risk-averse**, as demonstrated by the concavity of the utility function over its domain."
    ]
   }
  ],
