--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. **Certainty Equivalent and Risk Premium**\n",
+    "a. **Certainty Equivalent and Risk Premium** (5 pts)\n",
     "\n",
     "An investor whose initial wealth is $\\$1000$ is offered an opportunity to play a fair game with 2 possible outcomes: winning $\\$350$ with a probability of $1/3$ or losing $\\$150$ with a probability of $2/3$. The investor utility function is the natural logarithm of his wealth, $u(W) = \\ln(W)$.\n",
     "\n",
@@ -215,7 +215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b. **Sensitivity to Initial Wealth**\n",
+    "b. **Sensitivity to Initial Wealth** (5 pts)\n",
     "\n",
     "Assume that the initial wealth is $\\$2000$. What is the risk premium now?"
    ]
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c. **Sensitivity to Volatility**\n",
+    "c. **Sensitivity to Volatility** (5 pts)\n",
     "\n",
     "Assume that the initial wealth is $\\$1000$ and the outcomes are winning $\\$300$ with a probability of $1/2$ or losing $\\$300$ with a probability of $1/2$. What is the risk premium now?"
    ]
@@ -334,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. **Absolute Risk Aversion & Risk Attitude**\n",
+    "a. **Absolute Risk Aversion & Risk Attitude** (10 pts)\n",
     "\n",
     "Compute the absolute risk aversion coefficient and describe the risk attitude of the investor (Risk-averse or Risk-taker) as a function of $k$. Justify your answer."
    ]
@@ -434,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b. $\\boldsymbol{k = 1/2}$\n",
+    "b. $\\boldsymbol{k = 1/2}$ (10 pts)\n",
     "\n",
     "Assume that $k = 1/2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?"
    ]
@@ -544,7 +544,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c. $\\boldsymbol{k = 2}$\n",
+    "c. $\\boldsymbol{k = 2}$ (10 pts)\n",
     "\n",
     "Assume that $k = 2$. What is the Certainty equivalent of this risky game? What is the exact risk premium of this risky game? How good is the approximation obtained by using a Taylor series expansion and absolute Risk-aversion coefficient?"
    ]
@@ -618,7 +618,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a. **Risk Aversion**\n",
+    "a. **Risk Aversion** (10 pts)\n",
     "\n",
     "Prove that an investor with utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is risk-averse."
    ]
@@ -648,6 +648,16 @@
     "Since $\\lambda > 0$ and $e^{-\\lambda r_p}$ is always positive for all $r_p$ (as the exponential function is always positive), it follows that $U''(r_p)$ is **always negative** ($U''(r_p) < 0$) for any value of $r_p$. This **negative second derivative** indicates that the utility function $U(r_p)$ is **concave**, which is a hallmark of **risk aversion**.\n",
     "\n",
     "Therefore, the investor with the utility function $U(r_p) = -e^{-\\lambda r_p}$ for $\\lambda > 0$ is indeed **risk-averse**, as demonstrated by the concavity of the utility function over its domain."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. **Equivalent Quadratic Problem** (10 pts)\n",
+    "\n",
+    "- Provide the expressions of $\\mu_p(\\omega)$, the Expected return of the portfolio as a function of $\\mu$. Provide the expression of $\\sigma_p(\\omega)^2$, the variance of the portfolio as a function of $\\Sigma$. (5 pts)\n",
+    "- Now we assume that the distribution of $r$, random return of the securities, is Gaussian. Prove that maximizing the expected utility $E[U(r_P(\\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\\mu, \\Sigma$, and $\\omega$. (5 pts)"
    ]
   }
  ],
