--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -659,6 +659,29 @@
     "- Provide the expressions of $\\mu_p(\\omega)$, the Expected return of the portfolio as a function of $\\mu$. Provide the expression of $\\sigma_p(\\omega)^2$, the variance of the portfolio as a function of $\\Sigma$. (5 pts)\n",
     "- Now we assume that the distribution of $r$, random return of the securities, is Gaussian. Prove that maximizing the expected utility $E[U(r_P(\\omega))]$ is equivalent to a linear quadratic minimization of an objective function depending solely on $\\mu, \\Sigma$, and $\\omega$. (5 pts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given a portfolio of $n$ securities with returns vector $r = (r_1, r_2, \\dots, r_n)^T$, expected returns vector $\\mu = E(r)$, and the variance-covariance matrix $\\Sigma = cov(r)$, and considering the portfolio is defined by a vector of weights $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$, we can express:\n",
+    "\n",
+    "1. **The Expected Return of the Portfolio, $\\mu_p(\\omega)$**, as a function of $\\mu$:\n",
+    "\n",
+    "   The expected return of the portfolio is calculated as the **dot/inner product** of the weights vector $\\omega$ and the expected returns vector $\\mu$:\n",
+    "   \n",
+    "   $$\\mu_p(\\omega) = \\omega^T \\mu$$\n",
+    "\n",
+    "   This expression represents the weighted sum of the expected returns of the individual securities in the portfolio, where each security's expected return is multiplied by its corresponding weight in the portfolio.\n",
+    "\n",
+    "2. **The Variance of the Portfolio, $\\sigma_p(\\omega)^2$**, as a function of $\\Sigma$:\n",
+    "\n",
+    "   The variance of the portfolio is calculated using the weights vector $\\omega$ and the variance-covariance matrix $\\Sigma$:\n",
+    "\n",
+    "   $$\\sigma_p(\\omega)^2 = \\omega^T \\Sigma \\omega$$\n",
+    "\n",
+    "   This formula captures the combined risk of the portfolio by taking into account not only the variances of individual security returns (diagonal elements of $\\Sigma$) but also the covariances between pairs of securities (off-diagonal elements of $\\Sigma$). The portfolio's variance is a measure of the total risk of the portfolio, considering the diversification effect due to correlations among the securities."
+   ]
   }
  ],
  "metadata": {
