Solve and prove 3bii.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -682,6 +682,47 @@
     "\n",
     "   This formula captures the combined risk of the portfolio by taking into account not only the variances of individual security returns (diagonal elements of $\\Sigma$) but also the covariances between pairs of securities (off-diagonal elements of $\\Sigma$). The portfolio's variance is a measure of the total risk of the portfolio, considering the diversification effect due to correlations among the securities."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given that the distribution of $r$, the random return of the securities, is Gaussian, and considering an investor with a utility function $U(r_p) = -e^{-\\lambda r_p}$, where $\\lambda > 0$ indicates risk aversion, we aim to prove that maximizing the expected utility $E[U(r_P(\\omega))]$ is equivalent to minimizing a linear quadratic objective function that depends only on $\\mu$, $\\Sigma$, and $\\omega$.\n",
+    "\n",
+    "##### *Expected Utility*\n",
+    "\n",
+    "The expected utility for the portfolio return $r_P(\\omega)$ is given by:\n",
+    "\n",
+    "$$E[U(r_P(\\omega))] = E[-e^{-\\lambda r_P(\\omega)}]$$\n",
+    "\n",
+    "Since $r_P(\\omega)$ is a linear combination of the Gaussian random variables $r$, it follows that $r_P(\\omega)$ is **also Gaussian**. Let $\\mu_P(\\omega)$ and $\\sigma_P(\\omega)^2$ denote the expected return and variance of the portfolio return $r_P(\\omega)$ respectively. Then, the expected utility can be expressed as:\n",
+    "\n",
+    "$$E[U(r_P(\\omega))] = -\\int e^{-\\lambda r_P(\\omega)} f(r_P(\\omega)) dr_P(\\omega)$$\n",
+    "\n",
+    "where $f(r_P(\\omega))$ is the probability density function of the Gaussian distribution of $r_P(\\omega)$. \n",
+    "\n",
+    "##### *Simplification using Gaussian Properties*\n",
+    "\n",
+    "For a Gaussian random variable $X \\sim \\mathcal{N}(\\mu, \\sigma^2)$, the integral of the form $\\int e^{-aX} \\phi(X) dX$ (where $\\phi(X)$ is the Gaussian density function) can be solved analytically, yielding an expression involving $\\mu$ and $\\sigma^2$. Applying this to the expected utility expression gives:\n",
+    "\n",
+    "$$E[U(r_P(\\omega))] = -e^{-\\lambda \\mu_P(\\omega) + \\frac{\\lambda^2 \\sigma_P(\\omega)^2}{2}}$$\n",
+    "\n",
+    "##### *Objective Function*\n",
+    "\n",
+    "Maximizing $E[U(r_P(\\omega))]$ is equivalent to maximizing:\n",
+    "\n",
+    "$$-\\lambda \\mu_P(\\omega) + \\frac{\\lambda^2 \\sigma_P(\\omega)^2}{2}$$\n",
+    "\n",
+    "Since maximizing a function is equivalent to minimizing its negative, we define the objective function to minimize as:\n",
+    "\n",
+    "$$J(\\omega) = \\lambda \\mu_P(\\omega) - \\frac{\\lambda^2 \\sigma_P(\\omega)^2}{2}$$\n",
+    "\n",
+    "where $\\mu_P(\\omega) = \\omega^T \\mu$ and $\\sigma_P(\\omega)^2 = \\omega^T \\Sigma \\omega$. Thus, the problem of maximizing expected utility translates to minimizing:\n",
+    "\n",
+    "$$J(\\omega) = \\lambda \\omega^T \\mu - \\frac{\\lambda^2 \\omega^T \\Sigma \\omega}{2}$$\n",
+    "\n",
+    "This is a **linear quadratic objective function** dependent only on $\\mu$, $\\Sigma$, and $\\omega$, establishing the equivalence as required."
+   ]
   }
  ],
  "metadata": {
