Write the prompt for 4a, b, c, d.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -723,6 +723,53 @@
     "\n",
     "This is a **linear quadratic objective function** dependent only on $\\mu$, $\\Sigma$, and $\\omega$, establishing the equivalence as required."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 4. Numerical Application for Exponential Utility Under the Constraint that the Sum of Weights Equals to 1. (25 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. **Stock Closing Prices**\n",
+    "\n",
+    "Download daily closing prices for the common stocks of Apple, Google, Facebook and Amazon from January 1st, 2022 to December 30th, 2023."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. **Expected Returns Vector & Covariance Matrix**\n",
+    "\n",
+    "Use the entire data to compute the Expected Returns Vector and Covariance matrix."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c. **Sequence Creation**\n",
+    "\n",
+    "Create a sequence $\\Lambda = \\{\\lambda_0, \\lambda_1, \\dots, \\lambda_n\\}$ containing numbers from 0.01 to 100 in steps of 0.1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d. **Optimal Portfolio**\n",
+    " \n",
+    "Run through a loop for each value in $\\lambda_{i} \\in \\Lambda$ to:\n",
+    "- Using a numerical solver in R, Matlab or Python, find the optimal portfolio corresponding to Item 3-(c) with the computed $\\rho, \\Sigma$ and $\\lambda_i$ selected from $\\Lambda$.\n",
+    "- Compute the optimal portfolio’s expected return and standard deviation of return.\n",
+    "- Store the optimal’s portfolio return and standard deviation.\n",
+    "- After completing the loop, plot the efficient frontier."
+   ]
   }
  ],
  "metadata": {
