--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -741,6 +741,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[**********************50%%                      ]  2 of 4 completed"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%%**********************]  4 of 4 completed"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ticker            AAPL        AMZN       GOOGL        META\n",
+      "Date                                                      \n",
+      "2022-01-03  182.009995  170.404495  144.991501  338.540009\n",
+      "2022-01-04  179.699997  167.522003  144.399506  336.529999\n",
+      "2022-01-05  174.919998  164.356995  137.774994  324.170013\n",
+      "2022-01-06  172.000000  163.253998  137.747498  332.459991\n",
+      "2022-01-07  172.169998  162.554001  137.016998  331.790009\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import yfinance as yf\n",
+    "\n",
+    "# Define the tickers.\n",
+    "tickers = ['AAPL', 'GOOGL', 'META', 'AMZN']\n",
+    "\n",
+    "# Define the date range.\n",
+    "start_date = '2022-01-01'\n",
+    "end_date = '2023-12-30'\n",
+    "\n",
+    "# Download the stock data.\n",
+    "stock_data = yf.download(tickers, start=start_date, end=end_date)\n",
+    "\n",
+    "# Display the closing prices.\n",
+    "closing_prices = stock_data['Close']\n",
+    "print(closing_prices.head())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
