--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -742,16 +742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[**********************50%%                      ]  2 of 4 completed"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -805,6 +798,49 @@
     "b. **Expected Returns Vector & Covariance Matrix**\n",
     "\n",
     "Use the entire data to compute the Expected Returns Vector and Covariance matrix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Expected Returns Vector:\n",
+      " Ticker\n",
+      "AAPL     0.000279\n",
+      "AMZN     0.000129\n",
+      "GOOGL    0.000167\n",
+      "META     0.000680\n",
+      "dtype: float64\n",
+      "\n",
+      "Covariance Matrix:\n",
+      " Ticker      AAPL      AMZN     GOOGL      META\n",
+      "Ticker                                        \n",
+      "AAPL    0.000335  0.000305  0.000283  0.000357\n",
+      "AMZN    0.000305  0.000719  0.000401  0.000548\n",
+      "GOOGL   0.000283  0.000401  0.000483  0.000489\n",
+      "META    0.000357  0.000548  0.000489  0.001151\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute daily returns.\n",
+    "daily_returns = closing_prices.pct_change().dropna()\n",
+    "\n",
+    "# Expected Returns Vector (mean of daily returns).\n",
+    "expected_returns = daily_returns.mean()\n",
+    "\n",
+    "# Covariance Matrix of returns.\n",
+    "covariance_matrix = daily_returns.cov()\n",
+    "\n",
+    "# Display the results\n",
+    "print(\"\\nExpected Returns Vector:\\n\", expected_returns)\n",
+    "print(\"\\nCovariance Matrix:\\n\", covariance_matrix)"
    ]
   },
   {
