--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -853,6 +853,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.01 0.11 0.21 0.31 0.41 0.51 0.61 0.71 0.81 0.91]\n",
+      "[99.01 99.11 99.21 99.31 99.41 99.51 99.61 99.71 99.81 99.91]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create the sequence Lambda from 0.01 to 100 in steps of 0.1, excluding the last step if it goes over 100.\n",
+    "Lambda = np.arange(0.01, 100.01, 0.1)\n",
+    "\n",
+    "# Display the first few elements to verify.\n",
+    "print(Lambda[:10])\n",
+    "\n",
+    "# Display the last few elements to verify.\n",
+    "print(Lambda[-10:])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
