Write portfolio_variance(), portfolio_return(), and optimize_portfolio() methods with doc-strings & type-hinting.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -889,6 +889,85 @@
     "- Store the optimal’s portfolio return and standard deviation.\n",
     "- After completing the loop, plot the efficient frontier."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.optimize import minimize\n",
+    "from typing import Tuple, Callable\n",
+    "\n",
+    "mu = expected_returns\n",
+    "Sigma = covariance_matrix\n",
+    "\n",
+    "def portfolio_variance(weights: np.ndarray, Sigma: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    Compute the variance of a portfolio.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - weights (np.ndarray): The weights of the assets in the portfolio.\n",
+    "    - Sigma (np.ndarray): The covariance matrix of the asset returns.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: The variance of the portfolio.\n",
+    "    \"\"\"\n",
+    "    return np.dot(weights.T, np.dot(Sigma, weights))\n",
+    "\n",
+    "def portfolio_return(weights: np.ndarray, mu: np.ndarray) -> float:\n",
+    "    \"\"\"\n",
+    "    Compute the expected return of a portfolio.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - weights (np.ndarray): The weights of the assets in the portfolio.\n",
+    "    - mu (np.ndarray): The expected returns of the assets.\n",
+    "\n",
+    "    Returns:\n",
+    "    - float: The expected return of the portfolio.\n",
+    "    \"\"\"\n",
+    "    return np.dot(weights.T, mu)\n",
+    "\n",
+    "def optimize_portfolio(lamb: float, mu: np.ndarray, Sigma: np.ndarray, n: int) -> Tuple[np.ndarray, float, float]:\n",
+    "    \"\"\"\n",
+    "    Optimize the portfolio for a given risk aversion coefficient.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - lamb (float): The risk aversion coefficient.\n",
+    "    - mu (np.ndarray): The expected returns of the assets.\n",
+    "    - Sigma (np.ndarray): The covariance matrix of the asset returns.\n",
+    "    - n (int): The number of assets.\n",
+    "\n",
+    "    Returns:\n",
+    "    - Tuple[np.ndarray, float, float]: Optimal weights, expected return, and standard deviation of the optimized portfolio.\n",
+    "    \"\"\"\n",
+    "    # Objective function: Minimize negative utility.\n",
+    "    def objective(weights: np.ndarray) -> float:\n",
+    "        return -portfolio_return(weights, mu) + lamb * portfolio_variance(weights, Sigma) / 2\n",
+    "    \n",
+    "        # Constraints: Weights sum to 1\n",
+    "    constraints = ({'type': 'eq', 'fun': lambda weights: np.sum(weights) - 1})\n",
+    "    \n",
+    "    # Bounds for weights\n",
+    "    bounds = tuple((0, 1) for _ in range(n))\n",
+    "    \n",
+    "    # Initial guess\n",
+    "    initial_guess = np.ones(n) / n\n",
+    "    \n",
+    "    # Optimization\n",
+    "    result = minimize(objective, initial_guess, method='SLSQP', bounds=bounds, constraints=constraints)\n",
+    "\n",
+    "    if result.success:\n",
+    "        optimal_weights = result.x\n",
+    "        opt_return = portfolio_return(optimal_weights, mu)\n",
+    "        opt_variance = portfolio_variance(optimal_weights, Sigma)\n",
+    "        opt_stddev = np.sqrt(opt_variance)\n",
+    "        return optimal_weights, opt_return, opt_stddev\n",
+    "    else:\n",
+    "        raise ValueError(\"Optimization failed.\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
