Write Problem 5's prompt.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Problem #1 - Utility Functions"
+    "#### Section #1 - Utility Functions"
    ]
   },
   {
@@ -611,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider an investment universe with $n$ securities, $S_1, S_2, \\dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \\dots, r_n)^T$, the vector of random returns of the securities, and by $\\mu = E(r)$ and $\\Sigma = cov(r)$ (the Expected Return and Variance-covariance matrix respectively). We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ with random return $r_p(\\omega)$."
+    "Consider an investment universe with $n$ securities, $S_1, S_2, \\dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \\dots, r_n)^T$, the vector of random returns of the securities, and by $\\mu = E(r)$ and $\\Sigma = cov(r)$ the Expected Return and Variance-covariance matrix, respectively. We assume that an investor has a fully invested Portfolio defined by a vector of weights or holdings $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ with random return $r_p(\\omega)$."
    ]
   },
   {
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1004,6 +1004,27 @@
     "plt.legend()\n",
     "plt.grid(True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Section #2 - Diversification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 5. Equally Weighted Portfolio: Diversifying the Risk Away (10 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consider an investment universe with $n$ securities, $S_1, S_2, \\dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \\dots, r_n)^T$, the vector of random returns of the securities, and by $\\mu = E(r)$ and $\\Sigma = cov(r)$ the Expected Return and Variance-covariance matrix, respectively. We assume that an investor has a fully invested **equally weighted Portfolio** defined by a vector of weights or holdings $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ (meaning that $\\omega_i = \\frac{1}{n}$) for each $i \\in \\{1, \\dots, n\\}$. We will denote by $r_p(\\omega)$ the Portfolio’s random return and by $\\sigma_P(n)$ the Portfolio’s risk."
    ]
   }
  ],
