Write prompt for 5a.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -1026,6 +1026,15 @@
    "source": [
     "Consider an investment universe with $n$ securities, $S_1, S_2, \\dots, S_n$. Given a fixed investment horizon, we denote by $r = (r_1, r_2, \\dots, r_n)^T$, the vector of random returns of the securities, and by $\\mu = E(r)$ and $\\Sigma = cov(r)$ the Expected Return and Variance-covariance matrix, respectively. We assume that an investor has a fully invested **equally weighted Portfolio** defined by a vector of weights or holdings $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ (meaning that $\\omega_i = \\frac{1}{n}$) for each $i \\in \\{1, \\dots, n\\}$. We will denote by $r_p(\\omega)$ the Portfolio’s random return and by $\\sigma_P(n)$ the Portfolio’s risk."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. **Portfolio Variance**\n",
+    "\n",
+    "Give the expression of the Portfolio’s variance $\\sigma^2_P(n)$ as a function of $\\Sigma$ and $n$."
+   ]
   }
  ],
  "metadata": {
