--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -1035,6 +1035,36 @@
     "\n",
     "Give the expression of the Portfolio’s variance $\\sigma^2_P(n)$ as a function of $\\Sigma$ and $n$."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Given an equally weighted portfolio with $n$ securities, the weights vector $\\omega$ is defined as $\\omega = (\\omega_1, \\omega_2, \\dots, \\omega_n)^T$ where $\\omega_i = \\frac{1}{n}$ for each $i \\in \\{1, \\dots, n\\}$. The portfolio's variance $\\sigma^2_P(n)$ can be expressed as a function of the variance-covariance matrix $\\Sigma$ and the number of securities $n$.\n",
+    "\n",
+    "The portfolio's variance is given by the formula:\n",
+    "\n",
+    "$$\\sigma^2_P(n) = \\omega^T \\Sigma \\omega$$\n",
+    "\n",
+    "Substituting the equal weights $\\omega_i = \\frac{1}{n}$ into the equation, we get:\n",
+    "\n",
+    "$$\\sigma^2_P(n) = \\left(\\frac{1}{n}\\right)^2 \\sum_{i=1}^{n}\\sum_{j=1}^{n} \\Sigma_{ij}$$\n",
+    "\n",
+    "Here, $\\Sigma_{ij}$ is the covariance between the returns of security $i$ and security $j$. Since the portfolio is equally weighted, each weight $\\omega_i$ is $\\frac{1}{n}$, and the expression simplifies by factoring out the squared weights:\n",
+    "\n",
+    "$$\\sigma^2_P(n) = \\frac{1}{n^2} \\sum_{i=1}^{n}\\sum_{j=1}^{n} \\Sigma_{ij}$$\n",
+    "\n",
+    "This expression shows that the portfolio's variance is the sum of all the variances and covariances in $\\Sigma$, scaled by the square of the reciprocal of the number of securities in the portfolio."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. **Variance Convergence**\n",
+    "\n",
+    "Prove that when goes to infinity, the variance of the Equally Weighted Portfolio’s variance $\\sigma^2_P(n)$ converges to the average covariance between all securities’ returns."
+   ]
   }
  ],
  "metadata": {
