--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -1065,6 +1065,39 @@
     "\n",
     "Prove that when goes to infinity, the variance of the Equally Weighted Portfolio’s variance $\\sigma^2_P(n)$ converges to the average covariance between all securities’ returns."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To prove that as the number of securities $n$ in an equally weighted portfolio goes to infinity, the portfolio's variance $\\sigma^2_P(n)$ converges to the average covariance between all securities' returns, we start with the expression for the portfolio's variance derived previously:\n",
+    "\n",
+    "$$\\sigma^2_P(n) = \\frac{1}{n^2} \\sum_{i=1}^{n}\\sum_{j=1}^{n} \\Sigma_{ij}$$\n",
+    "\n",
+    "This expression includes all variances along the diagonal ($\\Sigma_{ii}$) and all pairwise covariances ($\\Sigma_{ij}$ for $i \\neq j$). As $n$ becomes very large, the impact of variances on the portfolio's total variance diminishes because there are $n$ variances compared to $n(n-1)$ covariances. Therefore, the **variances become negligible**, and the covariances dominate.\n",
+    "\n",
+    "Let's separate the variances and covariances:\n",
+    "\n",
+    "$$\\sigma^2_P(n) = \\frac{1}{n^2} \\left(\\sum_{i=1}^{n}\\Sigma_{ii} + \\sum_{i=1}^{n}\\sum_{j \\neq i}^{n} \\Sigma_{ij}\\right)$$\n",
+    "\n",
+    "As $n$ approaches infinity, the first term, which is the sum of variances, grows linearly with $n$, while the second term, which is the sum of the covariances, grows quadratically with $n^2$. The contribution of the first term relative to the second term therefore becomes **zero** in the limit:\n",
+    "\n",
+    "$$\\lim_{n \\to \\infty} \\frac{1}{n^2} \\sum_{i=1}^{n}\\Sigma_{ii} = 0$$\n",
+    "\n",
+    "Now, consider the second term, which is the sum of all pairwise covariances. Each covariance term $\\Sigma_{ij}$ is counted twice in the double summation (once for $i, j$ and once for $j, i$), except for the variances. Therefore, in the limit, the portfolio variance converges to **twice the average** of the off-diagonal elements of $\\Sigma$:\n",
+    "\n",
+    "$$\\lim_{n \\to \\infty} \\sigma^2_P(n) = \\lim_{n \\to \\infty} \\frac{2}{n^2} \\sum_{i=1}^{n}\\sum_{j \\neq i}^{n} \\frac{\\Sigma_{ij}}{2}$$\n",
+    "\n",
+    "Simplifying further, since each covariance $\\Sigma_{ij}$ for $i \\neq j$ appears twice in the double summation:\n",
+    "\n",
+    "$$\\lim_{n \\to \\infty} \\sigma^2_P(n) = \\lim_{n \\to \\infty} \\frac{1}{n(n-1)} \\sum_{i=1}^{n}\\sum_{j \\neq i}^{n} \\Sigma_{ij}$$\n",
+    "\n",
+    "This is precisely the definition of the **average covariance** between all pairs of securities:\n",
+    "\n",
+    "$$\\lim_{n \\to \\infty} \\sigma^2_P(n) = \\text{average covariance}$$\n",
+    "\n",
+    "Thus, we have shown that as the number of securities in the equally weighted portfolio becomes very large, the portfolio's variance converges to the **average pairwise covariance** between all securities' returns."
+   ]
   }
  ],
  "metadata": {
