--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -1098,6 +1098,54 @@
     "\n",
     "Thus, we have shown that as the number of securities in the equally weighted portfolio becomes very large, the portfolio's variance converges to the **average pairwise covariance** between all securities' returns."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 6. Case of Two - A Portfolio with 2 Securities: Bringing the Risk to Zero (10 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We assume that $n = 2$ and denote by and denote by $\\rho$ the covariance between $r_1$ and $r_2$. Analyze the Portfolio’s Risk $\\sigma_P$ and Expected Return $\\mu_p = E(r_p)$, and provide their analytical expressions as a function of $\\rho$. Write a computer program in Python or R to plot the efficient frontier (graph of $\\mu_p$ [y-axis] as a function $\\sigma_P$ [x-axis]) in three following scenarios:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a. **Perfect Correlation**\n",
+    "\n",
+    "Perfect correlation: $\\rho = 1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. **Perfect Anti-Correlation**\n",
+    "\n",
+    "Perfect anti-correlation: $\\rho = -1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c. **No Correlation**\n",
+    "\n",
+    "No correlation: $\\rho = 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the graphical display of the efficient frontier curve, take $(\\mu_1, \\mu_2) = (5\\%, 10\\%)$ for the expected returns and $(\\sigma_1, \\sigma_2) = (5\\%, 15\\%)$ for the volatilities."
+   ]
   }
  ],
  "metadata": {
