Derive analytical expression for Problem 6.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -1117,6 +1117,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "When the portfolio consists of only two securities ($n=2$), and we denote the covariance between the returns of security 1 ($r_1$) and security 2 ($r_2$) by $\\rho$. The expected return of the portfolio $\\mu_p$ and the portfolio's risk $\\sigma_P$ can be expressed as a function of $\\rho$ as follows:\n",
+    "\n",
+    "##### *Expected Return of the Portfolio*:\n",
+    "\n",
+    "Given an equally weighted portfolio, the weights are $\\omega_1 = \\omega_2 = \\frac{1}{2}$. The expected return of the portfolio $\\mu_p$ is the weighted average of the expected returns of the individual securities, which can be written as:\n",
+    "\n",
+    "$$\\mu_p = \\omega_1 \\mu_1 + \\omega_2 \\mu_2 = \\frac{1}{2} \\mu_1 + \\frac{1}{2} \\mu_2$$\n",
+    "\n",
+    "Here, $\\mu_1$ and $\\mu_2$ are the expected returns of security 1 and security 2, respectively.\n",
+    "\n",
+    "##### *Portfolio's Risk*:\n",
+    "\n",
+    "The variance of the portfolio's return $\\sigma_P^2$ for two assets is given by:\n",
+    "\n",
+    "$$\\sigma_P^2 = \\omega_1^2 \\sigma_1^2 + \\omega_2^2 \\sigma_2^2 + 2 \\omega_1 \\omega_2 \\rho$$\n",
+    "\n",
+    "Substituting the equal weights $\\omega_1 = \\omega_2 = \\frac{1}{2}$ and simplifying, we get:\n",
+    "\n",
+    "$$\\sigma_P^2 = \\frac{1}{4} \\sigma_1^2 + \\frac{1}{4} \\sigma_2^2 + \\frac{1}{2} \\rho$$\n",
+    "\n",
+    "The portfolio's risk $\\sigma_P$ is the square root of the variance, so we have:\n",
+    "\n",
+    "$$\\sigma_P = \\sqrt{\\frac{1}{4} \\sigma_1^2 + \\frac{1}{4} \\sigma_2^2 + \\frac{1}{2} \\rho}$$\n",
+    "\n",
+    "These expressions provide the analytical forms of the expected return and risk of an equally weighted portfolio with two securities as functions of the covariance between the securities' returns, denoted by $\\rho$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "a. **Perfect Correlation**\n",
     "\n",
     "Perfect correlation: $\\rho = 1$"
