Export Problem 6 prompt problem to HTML.

--- a/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
+++ b/FE630 - Homework/FE630 - Homework #1/FE630 - Homework #1.ipynb
@@ -1141,7 +1141,11 @@
     "\n",
     "$$\\sigma_P = \\sqrt{\\frac{1}{4} \\sigma_1^2 + \\frac{1}{4} \\sigma_2^2 + \\frac{1}{2} \\rho}$$\n",
     "\n",
-    "These expressions provide the analytical forms of the expected return and risk of an equally weighted portfolio with two securities as functions of the covariance between the securities' returns, denoted by $\\rho$."
+    "These expressions provide the analytical forms of the expected return and risk of an equally weighted portfolio with two securities as functions of the **covariance** between the securities' returns, denoted by $\\rho$.\n",
+    "\n",
+    "If we let $\\rho$ be the **correlation coefficient**, then this would be the final expression:\n",
+    "\n",
+    "$$\\sigma_P = \\sqrt{\\frac{1}{4} \\sigma_1^2 + \\frac{1}{4} \\sigma_2^2 + \\frac{1}{2} \\rho \\sigma_1 \\sigma_2}$$"
    ]
   },
   {
